fixed friend cards padding on mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,9 @@ header, footer {
     }
 
     /* 友链列表 */
+    .main-content-social {
+        padding: 0;
+    }
     .friends-left-menu {
         position: static;
     }
